--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --ignore data/ --ext js index.js",
-
-    "init": "node scripts/init.js",
-    "poblate-dev": "DEV=1 node scripts/poblate.js"
+    "start": "node index.js",
+    "init": "node scripts/init.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +19,7 @@
   },
   "homepage": "https://github.com/jdguzmans/automated-apk-regression-testing#readme",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "standard": "^12.0.1"
   }
 }
