--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/jdguzmans/automated-apk-regression-testing#readme",
   "dependencies": {
+    "async": "^2.6.1",
     "dotenv": "^6.1.0",
+    "node-resemble-js": "^0.2.0",
     "standard": "^12.0.1"
   }
 }
